# consent_form_generator

./: .gitignore  CLAUDE.md  README.md  TODOS.md  download_translations.py  generate_pdfs.py  kannada.md  kn.md  pyproject.toml  update_consent_forms.py
consent_forms/: as.md  bn.md  en.md  gu.md  hi.md  ml.md  mr.md  or.md  ta.md  te.md
