[project]
name = "consent-form-generator"
version = "0.1.0"
description = "A tool to generate consent forms with Google Sheets integration"
dependencies = [
    "requests>=2.32.0",
    "gspread>=6.0.0",
    "markdown>=3.5.0",
    "weasyprint>=61.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []